timeline windows fix scrollbar

--- a/src/components/TimelineSection/TimelineSection.module.scss
+++ b/src/components/TimelineSection/TimelineSection.module.scss
@@ -2,6 +2,25 @@
 
 .timelineScrollable {
   overflow-x: scroll;
+
+  &::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+  }
+
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
 }
 
 .cta {
